[project]
name = "se_tutorial"
version = "1.0.0"
description = "This a python package example project."
requires-python = ">=3.8"
authors = [
    {name = "CedricLeon", email = "john@example.com"}
]
dependencies = [
    'numpy',
    'pandas',
]
[project.optional-dependencies]
tests = [ 'pytest' ]
docs = [ 'pdoc' ]
